--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,3 +10,13 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+  test:
+    needs: [lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run tests
+        uses: actions/checkout@v3
+      - name: Install deps
+        run: npm i
+      - name: Tests
+        run: npm run tests
